TIKA-4583: Add Docker and Kubernetes deployment documentation
- Add Docker Hub image instructions for apache/tika-grpc
- Add simple Kubernetes Deployment example
- Add StatefulSet deployment with Apache Ignite ConfigStore
- Document Ignite cluster configuration for pod-to-pod communication
- Add RBAC setup for Kubernetes API discovery
- Include HPA, monitoring, and troubleshooting sections
- Document required ports and environment variables for Ignite